--- a/main.html
+++ b/main.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+	<h1>Weather API</h1>
+	<button>Get Current Weather</button>
+	<div id="weatherData"></div>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
