--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<h1>Weather API</h1>
 	<button>Get Current Weather</button>
-	<div id="weatherData"></div>
+	<div id="weatherData" data-testid="weather-display"></div>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
