--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Weather API</h1>
-	<button>Get Current Weather</button>
+	<button id="btn">Get Current Weather</button>
 	<div id="weatherData" data-testid="weather-display"></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
